[package]
name = "feats_of_distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
lapin = "1.8"
serde_json = "1.0"
redis = { version = "0.21.0", features = ["tokio-comp"] }
backoff = { version = "0.4", features = ["tokio"] }
serde = "1.0.204"
futures = "0.3.30"
scylla = "0.13.1"
itertools = "0.13.0"
memoize = "0.4.2"
